--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -67,7 +67,7 @@ a:visited {
 }
 
 .container-custom {
-  max-width: 140rem;
+  width: 140rem;
   margin: 5rem auto;
   min-height: 80vh;
   display: flex;
@@ -182,8 +182,8 @@ a:visited {
 
 .square-card {
   height: 34.3rem;
-  width: 32.5rem;
-  margin: 1rem;
+  width: 33.7rem;
+  margin: 1rem 0;
   border-radius: 12px;
 }
 
