--- a/src/assets/media-queries.scss
+++ b/src/assets/media-queries.scss
@@ -3,6 +3,9 @@
   html {
     font-size: 20% !important;
   }
+  .container-custom {
+    width: 100%;
+  }
 }
 
 /* Extra small devices (phones, 600px and down) */
